--- a/application.yaml
+++ b/application.yaml
@@ -1,1 +1,6 @@
-selam: evet
+MQTT:
+  test:
+     domain: "smarttest"
+     userName: "smartest/exampledevice"
+     password: "00000000"
+     topic: "/v1/smarttest/device/exampledevice"
