added config server mqtt config

--- a/server-config/application.yml
+++ b/server-config/application.yml
@@ -1,6 +1,11 @@
-mqtt:
-  test:
-     domain: "smarttest"
-     userName: "smartest/exampledevice"
-     password: "00000000"
-     topic: "/v1/smarttest/device/exampledevice"
+MQTT:
+  Smartwind:
+    domain: "smartwind"
+    userName: "smartwind/exampledevice"
+    password: "12345678"
+    topic: "/v1/smartwind/device/exampledevice"
+  Greenhouse:
+    domain: "greenhouse"
+    userName: "greenhouse/testDevice"
+    password: "11111111"
+    topic: "/v1/greenhouse/device/testDevice"
