added config server mqtt config test 3

--- a/server-config/application.yml
+++ b/server-config/application.yml
@@ -4,7 +4,7 @@ mqtt:
     userName: "smartwind/exampledevice"
     password: "12345678"
     topic: "/v1/smartwind/device/exampledevice"
-  sreenhouse:
+  greenhouse:
     domain: "greenhouse"
     userName: "greenhouse/testDevice"
     password: "11111111"
