--- a/server-config/application.yml
+++ b/server-config/application.yml
@@ -1,6 +1,6 @@
 mqtt:
   smartwind:
-    domain: "smartwind2"
+    domain: "smartwind"
     userName: "smartwind/exampledevice"
     password: "12345678"
     topic: "/v1/smartwind/device/exampledevice"
